--- a/templates/post-view.html
+++ b/templates/post-view.html
@@ -52,7 +52,7 @@
 					<div class="col"><b>{{ post["subject"] }}</b></div>
 				</div>
 			{% endif %}
-			{% if post["tags"] %}
+			{% if post["tags"] and is_op %}
 				<div class="row">
 					<div class="col">
 						<small class="text-muted">Tags:</small>
@@ -86,8 +86,13 @@
 				<div class="col-auto">
 					<small><a class="badge badge-primary" href="#{{ post["id"] }}">Permalink</a></small>
 				</div>
+				<div class="col-auto" style="visibility: hidden;" id="{{ post["id"] }}-reply">
+					<small><a class="badge badge-primary" href="#" data-post="{{ post["id"] }}" data-toggle="modal" data-target="#replyModal">Reply</a></small>
+				</div>
 				<script>
-				 document.write("<div class=\"col-auto\"><small><a class=\"badge badge-primary\" href=\"#\" data-post=\"{{ post["id"] }}\" data-toggle=\"modal\" data-target=\"#replyModal\">Reply</a></small></div>")
+				 $(function() {
+					 $("#{{ post["id"] }}-reply").css("visibility", "visible")
+				 })
 				</script>
 				{% if get_slip() and get_slip().is_admin or get_slip().is_mod %}
 					<div class="col-auto">
