--- a/templates/thread.html
+++ b/templates/thread.html
@@ -67,12 +67,38 @@
 		 }
 	 })
 	</script>
-	<div class="container-fluid">
+	<div class="container-fluid" id="thread-container">
 		{% for post in posts %}
 			{% import "post-view.html" as post_view %}
 			{{ post_view.render_post(post, thread_id, loop.first) }}
 		{% endfor %}
-		<a href="#" name="thread-bottom"></a>
+		<a href="#" id="thread-bottom" name="thread-bottom"></a>
+		<script>
+		 var firehose = new EventSource("/api/v1/live")
+		 firehose.addEventListener("new-client", function(e) {
+			 var client_id = e.data
+			 var raw_subscribe_data = {"client-id": client_id,
+									   "subscribe": {"thread": [ {{ thread_id }} ]}}
+			 var subscribe_data = JSON.stringify(raw_subscribe_data)
+			 $.ajax({
+				 type: "POST",
+				 url: "/api/v1/live",
+				 dataType: "json",
+				 data: subscribe_data,
+				 contentType: "application/json",
+				 success: function(_) {
+					 firehose.addEventListener("new-post", function(e) {
+						 var data = JSON.parse(e.data)
+						 var post_id = data.post
+						 $.get("/threads/post/" + post_id, function(raw_post_body) {
+							 var post_body = $.parseHTML(raw_post_body, null, true)
+							 $("#thread-bottom").before(post_body)
+						 })
+					 })
+				 }
+			 })
+		 })
+		</script>
 		<script>
 		 $(".post-reply").on("show.bs.tooltip", function() {
 			 var original_tooltip = $(this)
